fix: new icon alignments for select and money input component (#479)

--- a/packages/components/src/moneyInput/MoneyInput.less
+++ b/packages/components/src/moneyInput/MoneyInput.less
@@ -27,3 +27,19 @@
     position: relative;
   }
 }
+
+// Fix chevron icon alignment (icons v2) in currency select button
+.tw-money-input .amount-currency-select-btn > .tw-select > .btn {
+  display: flex;
+  align-items: center;
+}
+.tw-money-input .amount-currency-select-btn > .tw-select > .btn-addon.dropdown-toggle {
+  padding-right: @spacer * 2;
+}
+.tw-money-input .amount-currency-select-btn > .tw-select > .btn > span {
+  line-height: 21px;
+}
+.tw-money-input .amount-currency-select-btn > .tw-select > .btn > span.tw-icon {
+  position: static;
+  padding-right: @spacer * 2;
+}
