--- a/packages/css/src/less/buttons.less
+++ b/packages/css/src/less/buttons.less
@@ -47,5 +47,9 @@ a.btn {
   }
   &.btn-sm .tw-icon {
     right: 8px;
+    top: 8px;
+  }
+  &.btn-lg .tw-icon {
+    top: 27px;
   }
 }
